# Coflux

./: CMakeLists.txt  CMakePresets.json  README.md  README.zh.md
benchmarks/: bench_channel.cpp  bench_creation.cpp  bench_noop_creation.cpp  bench_pipeline.cpp  bench_thread_pool_creation.cpp
docs/: ARCHITECTURE.en.md  ARCHITECTURE.zh.md  BENCHMARK.en.md  BENCHMARK.zh.md  README.en.md  README.zh.md
examples/: character_genrator.cpp  cowboy_showdown.cpp  examples.cpp  horse_race.cpp  ping_pong_game.cpp
include/: coflux.hpp
include/coflux/: attributes.hpp  awaiter.hpp  channel.hpp  combiner.hpp  concurrent.hpp  environment.hpp  executor.hpp  forward_declaration.hpp  generator.hpp  promise.hpp  result.hpp  scheduler.hpp  task.hpp  this_coroutine.hpp
include/coflux/concurrent/: ring.hpp  sequence_lock.hpp  sync_circular_buffer.hpp  thread_pool.hpp  timer_thread.hpp  unbounded_queue.hpp  worker_thread.hpp  worksteal_thread.hpp
include/coflux/concurrent/moodycamel/: concurrentqueue.h
include/coflux/detail/: attributes.hpp  awaiter.hpp  forward_declaration.hpp  promise.hpp  result.hpp
include/coflux/moodycamel/: blockingconcurrentqueue.h
src/: main.cpp
tests/: test_chaining.cpp  test_chaining_with_coawait.cpp  test_channel.cpp  test_combiner.cpp  test_generator.cpp  test_structure.cpp
